--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,9 +29,15 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ fromJSON(steps.actual.outputs.vault).github_ro }}
+          GITHUB_TOKEN_SHORT_SYNTAX: ${{ steps.actual.outputs.github_ro }}
         run: |
-          gh workflow list --all | grep "Test action"
+          GH_TOKEN="${GITHUB_TOKEN:?missing token}" gh workflow list --all | grep "Test action"
+          GH_TOKEN="${GITHUB_TOKEN_SHORT_SYNTAX:?missing token}" gh workflow list --all | grep "Test action"
       - name: validate org_name
         shell: bash
+        env:
+          ORG_NAME: ${{ fromJSON(steps.actual.outputs.vault).org_name }}
+          ORG_NAME_SHORT_SYNTAX: ${{ steps.actual.outputs.org_name }}
         run: |
-          [[ "${{ fromJSON(steps.actual.outputs.vault).org_name }}" = "SonarSource" ]]
+          [[ "${ORG_NAME}" = "SonarSource" ]]
+          [[ "${ORG_NAME_SHORT_SYNTAX}" = "SonarSource" ]]
